// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components::Form::Form mounts with default props 1`] = `
.c4:not(:disabled) {
  color: white;
}

.c4 svg {
  vertical-align: top;
}

.c5 {
  padding-right: 8px;
}

.c1 {
  position: fixed;
  bottom: 0;
  right: 0;
  min-height: 53px;
  width: 100%;
  width: calc(100% - 56px);
  background-color: #fafafa;
  border-top: 1px solid #eeeeee;
  padding: 8px 24px 8px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 10;
}

.c1 button,
.c1 a {
  margin-left: 3px;
}

.c2 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 {
  height: 100%;
  width: 100%;
  padding-bottom: 56px;
}

<form
  class="c0"
  novalidate=""
>
  <div>
    ho
  </div>
  <footer
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <button
        class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-raised-15 MuiButton-raisedPrimary-16 c4"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-2"
        >
          <span
            class="c5"
          >
            <svg
              action="inherit"
              aria-hidden="true"
              class="MuiSvgIcon-root-30 MuiSvgIcon-fontSizeSmall-37"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
              />
            </svg>
          </span>
          Submit
        </span>
        <span
          class="MuiTouchRipple-root-39"
        />
      </button>
    </div>
  </footer>
</form>
`;

exports[`Components::Form::Form renders correctly when disabled 1`] = `
.c4:not(:disabled) {
  color: white;
}

.c4 svg {
  vertical-align: top;
}

.c5 {
  padding-right: 8px;
}

.c1 {
  position: fixed;
  bottom: 0;
  right: 0;
  min-height: 53px;
  width: 100%;
  width: calc(100% - 56px);
  background-color: #fafafa;
  border-top: 1px solid #eeeeee;
  padding: 8px 24px 8px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 10;
}

.c1 button,
.c1 a {
  margin-left: 3px;
}

.c2 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 {
  height: 100%;
  width: 100%;
  padding-bottom: 56px;
  pointer-events: none;
  opacity: 0.4;
}

<form
  class="c0"
  disabled=""
  novalidate=""
>
  <div>
    ho
  </div>
  <footer
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <button
        class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-raised-15 MuiButton-raisedPrimary-16 c4"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-2"
        >
          <span
            class="c5"
          >
            <svg
              action="inherit"
              aria-hidden="true"
              class="MuiSvgIcon-root-30 MuiSvgIcon-fontSizeSmall-37"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
              />
            </svg>
          </span>
          Submit
        </span>
        <span
          class="MuiTouchRipple-root-39"
        />
      </button>
    </div>
  </footer>
</form>
`;
